# fastapi-book

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/data/: creature.py  explorer.py  init.py  user.py
app/db/: cryptid.db
app/fake/: creature.py  explorer.py  user.py
app/service/: creature.py  explorer.py  user.py
app/web/: creature.py  explorer.py  user.py
test/unit/data/: test_creature_data.py
test/unit/service/: test_creature.py  test_creature_service.py
