[project]
name = "fastapi-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.2",
    "passlib>=1.7.4",
    "pytest>=8.3.3",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
]

[tool.pytest.ini_options]
testpaths = ["test"]
